fixed layout on small height devices

--- a/app/components/Home.module.css
+++ b/app/components/Home.module.css
@@ -70,6 +70,13 @@
     margin-top: 1rem;
   }
 }
+@media only screen and (max-height: 760px) and (min-width: 1024px) {
+  .home {
+    margin-top: 7rem;
+    margin-left: 7rem;
+    margin-right: 3rem;
+  }
+}
 
 @media only screen and (max-height: 635px) and (min-width: 1024px) {
   .home {
